# mq-edit

./: .gitignore  Cargo.toml  README.md  config.example.toml  mq.sublime-syntax
.github/workflows/: ci.yml  release.yml
assets/: demo.tape
crates/markdown-lsp/: Cargo.toml  README.md
crates/markdown-lsp/src/: backend.rs  diagnostics.rs  main.rs  manager.rs  markdown_lsp.rs
crates/md-lsp/: Cargo.toml
crates/md-lsp/src/: markdown_lsp.rs
crates/mq-edit/: Cargo.toml  mq.sublime-syntax
crates/mq-edit/assets/: tarn.tmTheme
crates/mq-edit/src/: app.rs  config.rs  document.rs  editor.rs  file.rs  lib.rs  main.rs  renderer.rs  theme.rs  ui.rs
crates/mq-edit/src/document/: buffer.rs  document_type.rs  history.rs  line_analyzer.rs
crates/mq-edit/src/file/: io.rs
crates/mq-edit/src/renderer/: code.rs  image_manager.rs  markdown.rs  plain_text.rs
crates/mq-edit/src/ui/: completion.rs  dialog.rs  editor.rs  file_browser.rs  mq_query_dialog.rs  search_dialog.rs  status_bar.rs
crates/mq-lsp/: Cargo.toml
crates/mq-lsp/src/: client.rs  lib.rs  manager.rs  markdown_lsp.rs
src/: app.rs  config.rs  document.rs  lib.rs  lsp.rs  main.rs  navigation.rs  ui.rs
src/document/: buffer.rs  cursor.rs  file_type.rs  line_analyzer.rs
src/editor/: editing.rs  navigation.rs
src/lsp/: client.rs  manager.rs
src/renderer/: image_manager.rs  markdown.rs  plain_text.rs
src/ui/: dialog.rs  editor.rs  file_browser.rs  search_dialog.rs  status_bar.rs
