[package]
name = "mq-edit"
version = "0.1.0"
edition = "2024"
rust-version = "1.92.0"

[[bin]]
name = "mq-edit"
path = "src/main.rs"

[dependencies]
md-lsp = { path = "../md-lsp" }
mq-markdown = "0.5.10"
ratatui = "0.30"
crossterm = { version = "0.28", features = ["event-stream"] }
unicode-width = "0.2"
unicode-segmentation = "1.12"
syntect = { version = "5.2", default-features = false, features = ["parsing", "regex-fancy", "default-syntaxes", "default-themes", "yaml-load", "plist-load"] }
walkdir = "2.5"
ignore = "0.4"
miette = { version = "7.6", features = ["fancy"] }
thiserror = "2.0"
smol_str = "0.3"
itertools = "0.14"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
dirs = "6.0"
clap = { version = "4.5", features = ["derive"] }
ratatui-image = { version = "2.0", features = ["serde"] }
image = "0.25"
lsp-types = "0.97"
serde_json = "1.0"
plist = "1.7"

[dev-dependencies]
tempfile = "3.24"
