[package]
edition = "2024"
name = "mq-edit"
rust-version = "1.92.0"
version = "0.1.0"

[[bin]]
name = "mq-edit"
path = "src/main.rs"

[dependencies]
clap = {version = "4.5", features = ["derive"]}
crossterm = {version = "0.29", features = ["event-stream", "use-dev-tty"]}
dirs = "6.0"
ignore = "0.4"
image = "0.25"
itertools = "0.14"
lsp-types = "0.97"
md-lsp = {path = "../md-lsp"}
miette = {version = "7.6", features = ["fancy"]}
mq-lang = "0.5.13"
mq-markdown = "0.5.10"
plist = "1.7"
ratatui = "0.30"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
smol_str = "0.3"
syntect = {version = "5.2", default-features = false, features = ["parsing", "regex-fancy", "default-syntaxes", "default-themes", "yaml-load", "plist-load"]}
thiserror = "2.0"
toml = "1.0"
unicode-segmentation = "1.12"
unicode-width = "0.2"
walkdir = "2.5"

[dev-dependencies]
tempfile = "3.24"
