[package]
authors = ["Takahiro Sato <harehare1110@gmail.com>"]
categories = ["command-line-utilities"]
description = "A markdown editor for the terminal"
edition = "2024"
homepage = "https://mqlang.org/"
keywords = ["markdown", "cli", "tui", "editor"]
license = "MIT"
name = "mq-edit"
readme = "../../README.md"
repository = "https://github.com/harehare/mq-edit"
version = "0.1.3"

[[bin]]
name = "mq-edit"
path = "src/main.rs"

[dependencies]
clap = {version = "4.5", features = ["derive"]}
crossterm = {version = "0.29", features = ["event-stream", "use-dev-tty"]}
dirs = "6.0"
ignore = "0.4"
image = "0.25"
itertools = "0.14"
lsp-types = "0.97"
markdown-lsp = {version = "0.1.1", path = "../markdown-lsp"}
miette = {version = "7.6", features = ["fancy"]}
mq-lang = "0.5.17"
mq-markdown = "0.5.17"
plist = "1.7"
ratatui = "0.30"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
smol_str = "0.3"
syntect = {version = "5.2", default-features = false, features = ["parsing", "regex-fancy", "default-syntaxes", "default-themes", "yaml-load", "plist-load"]}
thiserror = "2.0"
toml = "1.0"
unicode-segmentation = "1.12"
unicode-width = "0.2"
walkdir = "2.5"

[dev-dependencies]
tempfile = "3.24"
